kubernetes-gitops/deploy/istio/frontend-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend
  namespace: microservices-demo
spec:
  selector:
    istio: ingressgateway
  servers:
   - port:
       number: 80
       name: http
       protocol: HTTP
     hosts:
       - "*"
