kubernetes-gitops/deploy/istio/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: microservices-demo
spec:
  hosts:
  - "*"
  gateways:
  - frontend
  http:
    - route:
      - destination:
          host: frontend
          port:
            number: 80
